learning plan updated

--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
   <p> Please check out my blog posts, past, present and future. </p> 
 
 <div>  </div>  
-<ol>
-  <li> <a class="pink-text" href="identity-values.html"> Identity + Values Blog</a>
 
-    <a class="brown-text" href="html-css.html"> HTML + CSS Blog</a>
+    <a class="pink-text" href="identity-values.html"> Identity + Values</a>
 
-    <a class="pink-text" href="emotional-intelligence.html"> Emotional Intelligence Blog</a>
+    <a class="brown-text" href="html-css.html"> HTML + CSS</a>
 
-    <a class="brown-text" href="javascript-dom.html"> Javascript + DOM Blog </a>
+    <a class="pink-text" href="emotional-intelligence.html"> Emotional Intelligence</a>
 
-    <a class="pink-text" href="learning-plan.html"> Learning plan Blog</a>
+    <a class="brown-text" href="javascript-dom.html"> Javascript + DOM  </a>
 
-    <a class="brown-text" href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset Blog</a>
+    <a class="pink-text" href="learning-plan.html"> Learning plan </a>
 
-    <a class="pink-text"href="problemSolving.html"> Problem Solving Blog</a>
+    <a class="brown-text" href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset </a>
 
-    <a class="brown-text" href=""> Reflection Blog </a>
+    <a class="pink-text"href="problemSolving.html"> Problem Solving </a>
+
+    <a class="brown-text" href=""> Reflection  </a>
 
     <a class="pink-text"  href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
-</ol>
+
     <footer id="footer"> Copyright B.S Limited</footer>
 
  </main>
