--- a/learning-plan.html
+++ b/learning-plan.html
@@ -8,36 +8,99 @@
         <title>HTML Template</title>
     </head>
     <body>
-     <h1>My learning plan</h1> 
+     <h1>My fresh learning plan</h1> 
 
-     <h2>What is your long term goal or career pathway?</h2>
+<h2>What is your long term goal or career pathway?</h2>
+
+<p> 
+  In the short- long term I would just like to learn as much as possible about Javascript. I am really looking forward to being at a stage where I can be more creative with writing in this language. I also want to be more proficient in the styling aspects of CSS. 
+
+  Long term, let's dream big. I want to work for a “BIG” tech company overseas. Interpret this at your own risk! I am overtly aware that it may sound silly to my reader. 
+  I guess I am open to all career pathways here. The reason for this is that my understanding is developers are looked after as a broad statement on the profession as well as the growth being endless. I want to ultimately be working for good, I would like to be aiding research or medicine. I would also like to long term bring my skills back to a writing/ communication based platform(of the future, maybe 5-10  years from now). 
+  
+</p>
+
+<h2>
+  What do you think your biggest strengths and limitations will be in Bootcamp?
+</h2>
+<p>
+  Limitations wise; I think it would be the age old, mother of all evil, assumption (brain default). This is something I do work against/ work on as an overall way of being but it's  a gnarly biter. Assumption is something that gets all humans all the time, actually we really feed off it in a colonized society. I think assumption is a very lame/ low frequency to exert. I am a big believer/ do-er in treating people how you want to be treated. I don't want to assume anything about my peers, teaching staff or faculty at EDA. I hope that there will be people reaching for as well as actively holding that space as well. 
+
+  I think my biggest strengths in bootcamp will be empathy, motivation and openness. I hope to bring a deep level of, understood, empathy to the Horoeka cohort and apply that throughout my practise, of studying to be a junior developer. I think being open to feedback is a key part of this learning environment. 
+</p> 
+<h2>
+What do you think your biggest non-technical challenge at Bootcamp will be?
+</h2> 
+<p>
+  I am not sure if this will actualise as the biggest non-technical challenge but it is my biggest concern(albeit probably unnecessary) is in line with feeling like runt of the litter, just being able to understand/ when directed by students who do have a more formal training (computer science degree) or rhetoric as a developer. Likewise with the facilitators. Although I think I may be getting just a bit obsessed with communication here. 
+</p>
+
+<h2> 
+  What non-technical skills - human skills - would you like to see developed in yourself while at Dev Academy?
+</h2>
+<p>
+  I would like to develop observing over absorbing, I want to be able to zoom out with ease and see that it is not about what is “wrong” with me. 
+  I really want to develop who I interact in a team setting. I really also just want to be, continually, developing confidence and trust in myself. I want to continually be developing my self-awareness, through the bootcamp and beyond. I would also really like to develop my communication selves and how I present/ are perceived by others. I am a naturally taningentile person and a slow burner. I want to really connect into my neutrality while re-up-ing the pace of my brain.  
+</p>
+<h2>
+  What are your expectations from the Bootcamp team?
+</h2> 
+<p>
+  I expect hands on help and availability.  
+  I expect a thoughtful and considered approach to the wide spectrum of students attending the bootcamp. 
+  I expect to be supported throughout the process, in a holistic way.   
+</p>
+ 
+<h2>
+  What are your expectations of yourself on Bootcamp? 
+
+</h2>
+<p>
+  I will hand in and complete all the work on time. I will take care of myself, as well as possible, so that I am in the best physical/ brain place. I will be on time, ask questions and revise (nightly).  I will also learn outside of the curriculum to support what we are learning in class. I will ask for and seek help in a timely and efficient manner sans embarrassment.
+</p>     
+     
+
+
+
+
+
+
+
+<h2>What is your long term goal or career pathway?</h2>
 
 <p>My goal for being at DEV is to learn how to be a full stack developer. Long term I would like to work within Aotearoa for a minimum of 1 year, potentially in the health sector or working for a well established company, where I can gain experience across the board and be on a sustainable career path. I would really like to work internationally in the tech field. My goal is to be working in England, Ireland or Scotland within the next 2 years. 
-</p> <h2>
+</p> 
+<h2>
 Describe your strengths and limitations when it comes to learning.
-</h2><p>
+</h2>
+<p>
 A key strength as well as a limitation is my sensitivity. It means that I can be very hard on myself, and struggle to ask for help, because I have already created a list of judgments etc, “everyone” else has made about me or will make. I feel like my sensitivity (as I am sure on a global level) has really been heightened during the global pandemic and consequent lockdowns in Tāmaki. I am becoming a bit desensitized now and actively working against the roadblock of the mind everyday. I am finding coding actually quite helpful in getting out of my sensitive head and into more of an equation, pattern making world. 
 
 Limitation would be sustaining long periods of focus; I am using the take of yourself and be very gentle with yourself to combat this. 
-</p> <h2>
+</p> 
+<h2>
 
 What skills (non-technical core/human skills) would you like to see developed in yourself while at Dev Academy?
-</h2> <p></p>
+</h2> 
+<p>
 Confidence in self and communication, are they key skills I would like to develop while studying. I have a terrible habit/ behaviour of putting myself down and gaslighting myself out of knowing the answer, instead of just saying it or asking the question as most likely someone else is wondering or will be. I feel like that can only grow through my time at DEV and within our homegroup and wider Horoeka cohort. I look forward to growing into myself a bit more, as time progresses. 
 </p>
 
 <h2> Share your commitment to how you will manage your workload in this programme. </h2>
 
 <p>I commit to treating DEV like a full time job of study, making sure that my time is prioritized around DEV. “Life is computer, life is code”, - “new working draft” motto. I commit to making the most of the opportunity. I am finding timing my days is crucial to managing my workload. I commit to keeping the same practice of which programmes are opened daily, how I start my day and how to prioritize my workload. I commit to checking in the help channels and doing further research before asking for help on Discord. I commit to asking for help when I need it and doing so in an appropriate way. I am committing to putting myself and coding- at DEV as priority until I graduate; in all aspects of life. I commit to taking very good care of myself so that I can get the most out of the content of this programme. 
-</p><h2>
+</p>
+<h2>
 Share how you will commit to seeking help in a timely way.
-</h2> <p></p>
+</h2> <p>
 In terms of asking for help when getting stuck on a problem, I will commit to first checking the help-requests thread with the search and scroll function(s) to see if there are any answers to my question. I will first, by process of elimination and from what I have learned so far, trial and test the possible outcomes. I will also when faced with an issue check back to any cheat sheets or content that we have already covered. I will also google and see what other developers have done or what other solutions are available on the world-wide-web. 
-</p> <h2>
+</p> 
+<h2>
 
-Describe what you expect from the Facilitation team.</h2>
+Describe what you expect from the Facilitation team.
+</h2>
 <p>
 I expect empathy and respect. I expect that the facilitation team will honor what DEV has put out as their ethos in getting students to apply for this programme. That there is a level of care and understanding that is not yet present in higher level education across the west. I expect the team as a whole will be understanding and actively engage in our identity and values. I expect that the facilitation team will be on hand and willing to help, when we need not just because they are being paid to. 
 </p>   
-    </body>
+</body>
 </html>
