--- a/html-css.html
+++ b/html-css.html
@@ -7,7 +7,7 @@
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <body>
-    <h1>Sprint 2: CSS blog post</h1>
+    <h1>CSS </h1>
     <h2>What is the difference between Margin, Border, and Padding? </h2>
   
     <div>
