--- a/javascript-dom.html
+++ b/javascript-dom.html
@@ -6,6 +6,9 @@
     </title>
     <meta charset="UTF-8">
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
+   
+   
+   <h1> Javascript DOM</h1>
     <p> 
       DOM meaning: Document Object Model
       CSS meaning: Cascading Style Sheets
