--- a/neuroplasticity-growthMindset.html
+++ b/neuroplasticity-growthMindset.html
@@ -6,6 +6,8 @@
     </title>
     <meta charset="UTF-8">
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
+
+    <h2> Neuroplasitcy + Growth mindset</h2>
     <p>
     “A person who has good thoughts cannot ever be ugly. 
     You can have a wonky nose and a crooked mouth and a double chin and stick-out teeth, 
