--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -4,7 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emotional Intelligence Blog</title>
     <meta charset="UTF-8">
-    <link href="./styles/main.css" type="text/css" rel="stylesheet">
+   <link href="./styles/main.css" type="text/css" rel="stylesheet">
+
+   <body>
 <p>
    Emotional meaning: (of a person) having feelings that are easily excited and openly displayed.
    Intelligent meaning: having or showing intelligence, especially of a high level.
@@ -57,3 +59,4 @@
   I more than hope this will change and I might as well believe it. I might as well lend my sensitivity toward the development of my emotional intelligence and not let that gaslight me of my intelligence. 
   I see emotional quotient being so fiercely in tune with tech and that's why I have been so drawn to this industry. 
 </p>
+</body>
