--- a/problemSolving.html
+++ b/problemSolving.html
@@ -6,6 +6,8 @@
     </title>
     <meta charset="UTF-8">
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
+   
+   <h1> Problem Solving </h1>
     <p>
       Whilst first reading over the FizzBuzz kata, I felt very overwhelmed. 
       The divisibility by 3, 5 and 15 was enough for my brain to go argh.  
@@ -28,7 +30,7 @@
       I was then able to solve the problem and move forward. 
 </p>
     <div></div
-      <p>
+<p>
         The rubber ducky method is a huge skill for developers and any one in a syntax(y) field. Kids are learning to code right? 
         So we should be able to explain our problem, like we would a class of school children. 
         I really like this method, it  is a really positive, outside of head way to work on something so clinical.  
@@ -43,5 +45,5 @@
         I guess I would like to say I feel more confident in the testing realm but I think that defeats the purpose of really being able to test. 
         I think reflecting is key to being able to move forward during this course material. Without the reflection it would just be a whirlwind with lttle anchoring. Having the time to truly reflect on new ideas is a treasure. 
         With the tiny bit of perspective here, I think the problem solving methods would have been even more valuable introduced and enforced much earlier on in my developer process. 
-      </p>>
+  </p>
     <div></div>
