--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <title>Billie's Blog</title>
     <meta charset="UTF-8">
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com" rel="stylesheet">
+<link href="https://fonts.gstatic.com" crossorigin rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Proza+Libre&display=swap" rel="stylesheet">
-
 
 </head>
 <body>
 <main>
     <a href="#footer"> Bottom of page</a>
-    <h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
+<h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
+  
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak"> 
 
@@ -40,7 +38,7 @@
 
     <a class="pink-text"href="problemSolving.html"> Problem Solving </a>
 
-    <a class="brown-text" href=""> Reflection  </a>
+    <a class="brown-text" href="foundations-reflection.html"> Reflection  </a>
 
     <a class="pink-text"  href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
 
