--- a/index.html
+++ b/index.html
@@ -14,36 +14,35 @@
 </head>
 <body>
 <main>
-    <a href="#footer"> Bottom of page</a>
+<div class="header"> BNISDJDKJ </div>
 <h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
   
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak"> 
 
-  <p> Please check out my blog posts, past, present and future. </p> 
+  <p> Please check out my blog posts </p> 
 
-<div>  </div>  
+  <div class="topnav"> 
 
-    <a class="pink-text" href="identity-values.html"> Identity + Values</a>
+    <a  href="identity-values.html"> Identity + Values</a>
 
-    <a class="brown-text" href="html-css.html"> HTML + CSS</a>
+    <a  href="html-css.html"> HTML + CSS</a>
 
-    <a class="pink-text" href="emotional-intelligence.html"> Emotional Intelligence</a>
+    <a  href="emotional-intelligence.html"> Emotional Intelligence</a>
 
-    <a class="brown-text" href="javascript-dom.html"> Javascript + DOM  </a>
+    <a  href="javascript-dom.html"> Javascript + DOM  </a>
 
-    <a class="pink-text" href="learning-plan.html"> Learning plan </a>
+    <a  href="learning-plan.html"> Learning plan </a>
 
-    <a class="brown-text" href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset </a>
+    <a href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset </a>
 
-    <a class="pink-text"href="problemSolving.html"> Problem Solving </a>
+    <a href="problemSolving.html"> Problem Solving </a>
 
-    <a class="brown-text" href="foundations-reflection.html"> Reflection  </a>
+    <a  href="foundations-reflection.html"> Reflection  </a>
 
-    <a class="pink-text"  href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
+    <a   href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
+</div>
 
-    <footer id="footer"> Copyright B.S Limited</footer>
-
- </main>
+</main>
 </body>
 </html>
