listing titles added

--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <meta charset="UTF-8">
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
 
-<link href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com" rel="stylesheet">
-<link href="https://fonts.gstatic.com" crossorigin rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond&family=Proza+Libre&display=swap" rel="stylesheet">
+//FONT 
 
 </head>
 <body>
 <main>
-<div class="header"> BNISDJDKJ </div>
+<div class="header"> TACO TUESDAY </div>
 <h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
   
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
@@ -24,23 +21,25 @@
 
   <div class="topnav"> 
 
-    <a  href="identity-values.html"> Identity + Values</a>
+    <ul>
 
-    <a  href="html-css.html"> HTML + CSS</a>
+    <li><a  href="identity-values.html"> Identity + Values</a></li>
 
-    <a  href="emotional-intelligence.html"> Emotional Intelligence</a>
+    <li><a  href="html-css.html"> HTML + CSS</a></li>
 
-    <a  href="javascript-dom.html"> Javascript + DOM  </a>
+    <li><a  href="emotional-intelligence.html"> Emotional Intelligence</a></li>
 
-    <a  href="learning-plan.html"> Learning plan </a>
+    <li><a  href="javascript-dom.html"> Javascript + DOM  </a></li>
 
-    <a href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset </a>
+    <li><a  href="learning-plan.html"> Learning plan </a></li>
 
-    <a href="problemSolving.html"> Problem Solving </a>
+    <li><a href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset </a></li>
 
-    <a  href="foundations-reflection.html"> Reflection  </a>
+    <li><a href="problemSolving.html"> Problem Solving </a></li>
 
-    <a   href="https://devacademy.co.nz/?gclid=Cj0KCQjw6_CYBhDjARIsABnuSzqRGR69neA_gLzRtY3BtXMAoNzzl1iol-gNo_xEvWkSJru8jH7cwjIaArg8EALw_wcB"> DEV ACADEMY AOTEAROA</a>
+   <li><a  href="foundations-reflection.html"> Reflection  </a></li>
+  </ul>
+
 </div>
 
 </main>
