--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<htm lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Billie's Blog</title>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>A persons blog</title>
+
     <link href="./styles/main.css" type="text/css" rel="stylesheet">
 
 //FONT 
@@ -17,9 +18,7 @@
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak"> 
 
-  <p> Please check out my blog posts </p> 
-
-  <div class="topnav"> 
+  <p> Please check out my foundations blog posts </p> 
 
     <ul>
 
@@ -39,8 +38,6 @@
 
    <li><a  href="foundations-reflection.html"> Reflection  </a></li>
   </ul>
-
-</div>
 
 </main>
 </body>
