rakkas, madurai, shrikhand added

--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"
+    <link href="main.css" type="text/css" rel="stylesheet">
+
     <title>A persons blog</title>
 
-    <link href="./styles/main.css" type="text/css" rel="stylesheet">
 
 //FONT 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&family=Rakkas&family=Shrikhand&display=swap" rel="stylesheet">
 
 </head>
 <body>
@@ -18,25 +23,24 @@
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak"> 
 
-  <p> Please check out my foundations blog posts </p> 
+  <p> If you feel like it: you can scan my foundations blog posts </p> 
 
     <ul>
+          <li><a  href="identity-values.html"> Identity + Values</a></li>
 
-    <li><a  href="identity-values.html"> Identity + Values</a></li>
+          <li><a  href="html-css.html"> HTML + CSS</a></li>
 
-    <li><a  href="html-css.html"> HTML + CSS</a></li>
+          <li><a  href="emotional-intelligence.html"> Emotional Intelligence</a></li>
 
-    <li><a  href="emotional-intelligence.html"> Emotional Intelligence</a></li>
+          <li><a  href="javascript-dom.html"> Javascript + DOM  </a></li>
 
-    <li><a  href="javascript-dom.html"> Javascript + DOM  </a></li>
+          <li><a  href="learning-plan.html"> Learning plan </a></li>
 
-    <li><a  href="learning-plan.html"> Learning plan </a></li>
+          <li><a href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset </a></li>
 
-    <li><a href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset </a></li>
+          <li><a href="problemSolving.html"> Problem Solving </a></li>
 
-    <li><a href="problemSolving.html"> Problem Solving </a></li>
-
-   <li><a  href="foundations-reflection.html"> Reflection  </a></li>
+        <li><a  href="foundations-reflection.html"> Reflection  </a></li>
   </ul>
 
 </main>
