data-text html added

--- a/index.html
+++ b/index.html
@@ -24,21 +24,21 @@
   <p> If you feel like it: you can scan my foundations blog posts </p> 
 
     <ul>
-          <li><a  href="identity-values.html"> Identity + Values</a></li>
+          <li><a  href="identity-values.html" data-text="Identity + Values"> Identity + Values</a></li>
 
-          <li><a  href="html-css.html"> HTML + CSS</a></li>
+          <li><a  href="html-css.html" data-text="HTML + CSS"> HTML + CSS</a></li>
 
-          <li><a  href="emotional-intelligence.html"> Emotional Intelligence</a></li>
+          <li><a  href="emotional-intelligence.html" data-text="Emotional-Intelligence"> Emotional Intelligence</a></li>
 
-          <li><a  href="javascript-dom.html"> Javascript + DOM  </a></li>
+          <li><a  href="javascript-dom.html" data-text="Javascript + DOM"> Javascript + DOM  </a></li>
 
-          <li><a  href="learning-plan.html"> Learning plan </a></li>
+          <li><a  href="learning-plan.html" data-text="Leanring plan"> Learning plan </a></li>
 
-          <li><a href="neuroplasticity-growthMindset.html"> Neuroplasticity + Growth mindset </a></li>
+          <li><a href="neuroplasticity-growthMindset.html" data-text="Neuroplasticity + Growth mindset"> Neuroplasticity + Growth mindset </a></li>
 
-          <li><a href="problemSolving.html"> Problem Solving </a></li>
+          <li><a href="problemSolving.html" data-text="Problem Solving"> Problem Solving </a></li>
 
-        <li><a  href="foundations-reflection.html"> Reflection  </a></li>
+        <li><a  href="foundations-reflection.html" data-text="Reflection"> Reflection  </a></li>
   </ul>
 
 </main>
