--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"
-    <link href="main.css" type="text/css" rel="stylesheet">
+    
+    <link href="" type="text/css" rel="stylesheet">
 
     <title>A persons blog</title>
 
@@ -14,7 +14,6 @@
 
 </head>
 <body>
-<main>
 <div class="header"> TACO TUESDAY </div>
 <h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
   
@@ -40,7 +39,5 @@
 
         <li><a  href="foundations-reflection.html" data-text="Reflection"> Reflection  </a></li>
   </ul>
-
-</main>
 </body>
 </html>
