old fonts delated i.e Proza Libre

--- a/index.html
+++ b/index.html
@@ -7,15 +7,13 @@
     <link href="" type="text/css" rel="stylesheet">
 
     <title>A persons blog</title>
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&family=Rakkas&family=Shrikhand&display=swap" rel="stylesheet">
 
 </head>
 <body>
-<div class="header"> TACO TUESDAY </div>
-<h1 class="bisque-background div.relatve">Welcome to a little known part of the internet</h1> 
+
+<a>Welcome to a little known part of the internet<a> 
   
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak"> 
