--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link href="" type="text/css" rel="stylesheet">
+    <link href="./main.css" type="text/css" rel="stylesheet">
 
     <title>A persons blog</title>
-    
+
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&family=Rakkas&family=Shrikhand&display=swap" rel="stylesheet">
 
 </head>
