--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
-    <link href="./main.css" type="text/css" rel="stylesheet">
+    <!-- <link href="./main.css" type="text/css" rel="stylesheet"> -->
+    <link a href="draft.css" type="text/css" rel="stylesheet">
+
 
     <title>A persons blog</title>
 
