divclass for background image

--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <!-- <link href="./main.css" type="text/css" rel="stylesheet"> -->
     <link a href="draft.css" type="text/css" rel="stylesheet">
 
-
-    <title>A persons blog</title>
+<title>A persons blog</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Arima+Madurai&family=Rakkas&family=Shrikhand&display=swap" rel="stylesheet">
 
 </head>
 <body>
 
+  <div class="background-image"></div>
 <a>Welcome to a little known part of the internet<a> 
   
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
