--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 <body>
 
   <div class="background-image"></div>
+  <style>
+    .background-image {
+      background-image: url(./styles/StClair.jpg);
+      width: 200px;
+      height: 200px;
+    } 
+
+  </style>
+
 <a>Welcome to a little known part of the internet<a> 
   
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
