--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <htm lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta http-equiv="X-UA-Compatible" contents="ie=edge">
     
     <!-- <link href="./main.css" type="text/css" rel="stylesheet"> -->
     <link a href="draft.css" type="text/css" rel="stylesheet">
@@ -18,8 +20,10 @@
   <style>
     .background-image {
       background-image: url(./styles/StClair.jpg);
+      background-size: contain;
+      background-repeat: no-repeat;
       width: 200px;
-      height: 200px;
+      height: 200vh;
     } 
 
   </style>
