iamge link updated

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
   <style>
     .background-image {
-      background-image: url(./styles/StClair.jpg);
+      background-image: url('./styles/StClair.jpg');
       background-size: contain;
       background-repeat: no-repeat;
       width: 200px;
