--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
   <div class="background-image"></div>
   
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+
+    }
     .background-image {
       background-image: url('./styles/StClair.jpg');
       background-size: contain;
@@ -27,7 +32,7 @@
       height: 100vh;
     } 
 
-  </style>
+</style>
 
 <a>Welcome to a little known part of the internet<a> 
   
