re wrapped style tag, moved body tag

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 </head>
 <body>
 
-  <div class="background-image"></div>
-  
+  <div class="background-image"> </div>
+  <div class="p-tag" </div>
+
+</body>
+
   <style>
     * {
       margin: 0;
@@ -32,9 +35,12 @@
       height: 100vh;
     } 
 
+.p-tag {
+  font-family: 'Lucida Sans';
+}
 </style>
 
-<a>Welcome to a little known part of the internet<a> 
+<p>Welcome to a little known part of the internet</p> 
   
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
   <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak"> 
@@ -58,5 +64,4 @@
 
         <li><a  href="foundations-reflection.html" data-text="Reflection"> Reflection  </a></li>
   </ul>
-</body>
 </html>
