tree images removed

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 <p>Welcome to a little known part of the internet</p> 
   
-  <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
-  <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak"> 
+  <!-- <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
+  <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">  -->
 
   <p> If you feel like it: you can scan my foundations blog posts </p> 
 
