/styles/draft.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" contents="ie=edge">
     
     <!-- <link href="./main.css" type="text/css" rel="stylesheet"> -->
-    <link a href="draft.css" type="text/css" rel="stylesheet">
+    <link a href="./styles/draft.css" type="text/css" rel="stylesheet">
 
 <title>A persons blog</title>
 
