--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
 <body>
 
   <div class="background-image"> </div>
-  <div class="p-tag" </div>
+  <div class="ptag" </div>
 
 </body>
-
   <style>
     * {
       margin: 0;
@@ -34,8 +33,8 @@
       height: 100vh;
     } 
 
-.p-tag {
-  font-family: 'Lucida Sans';
+.ptag {
+  font-family: 'Arima Madurai';
 }
 </style>
 
@@ -47,20 +46,20 @@
   <p> If you feel like it: you can scan my foundations blog posts </p> 
 
     <ul>
-          <li><a  href="identity-values.html" data-text="Identity + Values"> Identity + Values</a></li>
+          <li><a  href="#" data-text="Identity + Values"> Identity + Values</a></li>
 
-          <li><a  href="html-css.html" data-text="HTML + CSS"> HTML + CSS</a></li>
+          <li><a  href="#"  data-text="HTML + CSS"> HTML + CSS</a></li>
 
-          <li><a  href="emotional-intelligence.html" data-text="Emotional-Intelligence"> Emotional Intelligence</a></li>
+          <li><a  href="#" data-text="Emotional-Intelligence"> Emotional Intelligence</a></li>
 
-          <li><a  href="javascript-dom.html" data-text="Javascript + DOM"> Javascript + DOM  </a></li>
+          <li><a  href="#" data-text="Javascript + DOM"> Javascript + DOM  </a></li>
 
-          <li><a  href="learning-plan.html" data-text="Leanring plan"> Learning plan </a></li>
+          <li><a  href="#" data-text="Leanring plan"> Learning plan </a></li>
 
-          <li><a href="neuroplasticity-growthMindset.html" data-text="Neuroplasticity + Growth mindset"> Neuroplasticity + Growth mindset </a></li>
+          <li><a href="#" data-text="Neuroplasticity + Growth mindset"> Neuroplasticity + Growth mindset </a></li>
 
-          <li><a href="problemSolving.html" data-text="Problem Solving"> Problem Solving </a></li>
+          <li><a href="#" data-text="Problem Solving"> Problem Solving </a></li>
 
-        <li><a  href="foundations-reflection.html" data-text="Reflection"> Reflection  </a></li>
+        <li><a  href="#" data-text="Reflection"> Reflection  </a></li>
   </ul>
 </html>
