St Clair beach otepoti src added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 </body>
 
-
+<img src="./styles/StClair.jpg" alt="St Clair Beach, Otepoti"
 <p>Welcome to a little known part of the internet</p> 
   
   <!-- <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
