htm l added typo banana

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<htm lang="en">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta http-equiv="X-UA-Compatible" contents="ie=edge">
     
-    <!-- <link href="./main.css" type="text/css" rel="stylesheet"> -->
     <link a href="./styles/draft.css" type="text/css" rel="stylesheet">
 
 <title>A persons blog</title>
@@ -21,11 +19,12 @@
 
 </body>
 
+<h1>Welcome to a little known part of the internet</h1> 
+
 <img src="./styles/StClair.jpg" alt="St Clair Beach, Otepoti"
-<p>Welcome to a little known part of the internet</p> 
-  
+<!--   
   <!-- <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51200/5a51268_150px.jpg" alt="Mimosa tree, burnt orange leaves, captured by Theodor Horydczak">
-  <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">  -->
+ --> <img src="https://tile.loc.gov/storage-services/service/pnp/thc/5a51000/5a51100/5a51158_150px.jpg" alt="Mimosa tree, burnt red leaves, captured by Theodor Horydczak">  -->
 
   <p> If you feel like it: you can scan my foundations blog posts </p> 
 
