--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 </head>
 <body>
 
-  <div class="background-image"> </div>
+  <!-- <div class="background-image"> </div> -->
   <div class="ptag" </div>
+  <div class="h1"</div>
+
 
 <h1>Welcome to a little known part of the internet</h1> 
-<img src="./styles/StClair.jpg" alt="St Clair Beach, Otepoti"
+<img src="./styles/StClair.jpg" alt="St Clair Beach, Otepoti" height="300" width="900" >
 
   <p> If you feel like it: you can scan my foundations blog posts </p> 
 
