--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!-- <div class="background-image"> </div> -->
-  <div class="ptag" </div>
+  <div class="h2" </div>
   <div class="h1"</div>
 
 
