--- a/index.html
+++ b/index.html
@@ -17,29 +17,41 @@
   <!-- <div class="background-image"> </div> -->
   <div class="h2" </div>
   <div class="h1"</div>
+  <div class="img"</div>
 
+<audio controls> 
+<source src="./audio/Willow_Smith_-_Female_Energy_Music_Video.mp3" type="audio/mpeg" />
 
+</audio>
 <h1>Welcome to a little known part of the internet</h1> 
 <img src="./styles/StClair.jpg" alt="St Clair Beach, Otepoti" height="300" width="1000" >
 
-  <p> If you feel like it: you can scan my foundations blog posts </p> 
+  <h2> If you feel like it: you can scan my foundations blog posts </h2> 
 
     <ul>
-          <li><a  href="#" data-text="Identity + Values"> Identity + Values</a></li>
+          <li><a  href="#" data-text="Identity + Values"> 
+          Identity + Values</a></li>
 
-          <li><a  href="#"  data-text="HTML + CSS"> HTML + CSS</a></li>
+          <li><a  href="#"  data-text="HTML + CSS">
+          HTML + CSS</a></li>
 
-          <li><a  href="#" data-text="Emotional-Intelligence"> Emotional Intelligence</a></li>
+          <li><a  href="#" data-text="Emotional-Intelligence"> 
+          Emotional Intelligence</a></li>
 
-          <li><a  href="#" data-text="Javascript + DOM"> Javascript + DOM  </a></li>
+          <li><a  href="#" data-text="Javascript + DOM"> 
+          Javascript + DOM  </a></li>
 
-          <li><a  href="#" data-text="Leanring plan"> Learning plan </a></li>
+          <li><a  href="#" data-text="Leanring plan"> 
+          Learning plan </a></li>
 
-          <li><a href="#" data-text="Neuroplasticity + Growth mindset"> Neuroplasticity + Growth mindset </a></li>
+          <li><a href="#" data-text="Neuroplasticity + Growth mindset"> 
+          Neuroplasticity + Growth mindset </a></li>
 
-          <li><a href="#" data-text="Problem Solving"> Problem Solving </a></li>
+          <li><a href="#" data-text="Problem Solving"> 
+          Problem Solving </a></li>
 
-        <li><a  href="#" data-text="Reflection"> Reflection  </a></li>
+          <li><a  href="#" data-text="Reflection"> 
+          Reflection  </a></li>
   </ul>
 </body>
 </html>
