draft css added to all blogs

--- a/emotional-intelligence.html
+++ b/emotional-intelligence.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Emotional Intelligence Blog</title>
     <meta charset="UTF-8">
-   <link href="./styles/main.css" type="text/css" rel="stylesheet">
+   <link href="../styles/draft.css" type="text/css" rel="stylesheet">
 
    <body>
 <p>
