--- a/html-css.html
+++ b/html-css.html
@@ -3,7 +3,7 @@
   <head>
     <title> Sprint 2: CSS blog post</title>
     <meta charset="UTF-8">
-    <link href="./styles/main.css" rel="stylesheet" type="text/css">
+    <link href="./styles/draft.css" rel="stylesheet" type="text/css">
   </head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <h1>CSS </h1>
