--- a/problemSolving.html
+++ b/problemSolving.html
@@ -5,7 +5,7 @@
     <title>Problem solving
     </title>
     <meta charset="UTF-8">
-    <link href="./styles/main.css" type="text/css" rel="stylesheet">
+    <link href="./styles/draft.css" type="text/css" rel="stylesheet">
    
    <h1> Problem Solving </h1>
     <p>
