--- a/identity-values.html
+++ b/identity-values.html
@@ -3,7 +3,7 @@
   <head>
     <title>Values + Identity </title>
     <meta charset="UTF-8">
-    <link href="./styles/main.css" type="text/css" rel="stylesheet">
+    <link href="./styles/draft.css" type="text/css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   
