--- a/neuroplasticity-growthMindset.html
+++ b/neuroplasticity-growthMindset.html
@@ -5,7 +5,7 @@
     <title>Sprint 3 Blog
     </title>
     <meta charset="UTF-8">
-    <link href="./styles/main.css" type="text/css" rel="stylesheet">
+    <link href="./styles/draft.css" type="text/css" rel="stylesheet">
 
     <h2> Neuroplasitcy + Growth mindset</h2>
     <p>
