--- a/index.html
+++ b/index.html
@@ -29,28 +29,28 @@
   <h2> If you feel like it: you can scan my foundations blog posts </h2> 
 
     <ul>
-          <li><a  href="#" data-text="Identity + Values"> 
+          <li><a  href="./identity-values.html" data-text="Identity + Values"> 
           Identity + Values</a></li>
 
-          <li><a  href="#"  data-text="HTML + CSS">
+          <li><a  href="./html-css.html"  data-text="HTML + CSS">
           HTML + CSS</a></li>
 
-          <li><a  href="#" data-text="Emotional-Intelligence"> 
+          <li><a  href="./emotional-intelligence.html" data-text="Emotional-Intelligence"> 
           Emotional Intelligence</a></li>
 
-          <li><a  href="#" data-text="Javascript + DOM"> 
+          <li><a  href="./javascript-dom.html" data-text="Javascript + DOM"> 
           Javascript + DOM  </a></li>
 
-          <li><a  href="#" data-text="Leanring plan"> 
+          <li><a  href="./learning-plan.html" data-text="Leanring plan"> 
           Learning plan </a></li>
 
-          <li><a href="#" data-text="Neuroplasticity + Growth mindset"> 
+          <li><a href="./neuroplasticity-growthMindset.html" data-text="Neuroplasticity + Growth mindset"> 
           Neuroplasticity + Growth mindset </a></li>
 
-          <li><a href="#" data-text="Problem Solving"> 
+          <li><a href="./problemSolving.html" data-text="Problem Solving"> 
           Problem Solving </a></li>
 
-          <li><a  href="#" data-text="Reflection"> 
+          <li><a  href="./foundations-reflection.html" data-text="Reflection"> 
           Reflection  </a></li>
   </ul>
 </body>
